src/styles/globals.css
@import "./markdown-editor.css";
@import "./markdown.css";

@layer base {
  label,
  p,
  span,
  input {
    @apply text-secondary-800 text-base font-medium;
  }
  p,
  span,
  h1,
  h2,
  h3 {
    text-wrap: pretty;
  }
  *:focus {
    outline: none;
  }
  strong {
    @apply font-semibold;
  }
  body,
  html,
  #__next {
    height: 100%;
  }
  .head-style {
    /* @apply font-semibold; */
  }
  h1,
  .h1 {
    @apply head-style font-semibold text-lg;
  }
  h2,
  .h2 {
    @apply head-style text-lg;
  }
  h3,
  .h3 {
    @apply head-style text-lg;
  }
  *:not(a) > h2 {
    @apply text-primary-600;
  }
  a {
    @apply text-primary-600 hover:text-primary-500 active:text-primary-400 focus:text-primary-400;
  }

  ol.list {
    list-style-type: decimal;
  }
  ol.list li {
    @apply text-base font-medium;
    margin-left: 2rem;
  }

  .markdown,
  .markdown * {
    text-wrap: wrap;
    word-wrap: break-word;
  }
  .markdown ul {
    list-style-type: disc;
  }
  .markdown li {
    margin-left: 2rem;
  }
  .markdown li:last-child {
    margin-bottom: 1rem;
  }

  .table-container {
    @apply border border-secondary-300 rounded-md overflow-hidden;
  }

  table.table th {
    @apply bg-secondary-100;
    text-align: unset;
  }
  table.table th,
  table.table td {
    padding: 0.5rem 1rem;
  }
  table.table :is(th:not(:first-child), td:not(:first-child)) {
    @apply border-l border-secondary-300;
  }
}
@tailwind base;
@layer components {
  .lds-ring {
    position: relative;
  }
  .lds-ring-front {
    position: absolute;
    box-sizing: border-box;
    display: block;
    border: solid currentColor;
    border-radius: 50%;
    animation: lds-ring 1.2s ease infinite;
    border-color: currentColor transparent transparent transparent;
  }
  .lds-ring-back {
    position: absolute;
    box-sizing: border-box;
    display: block;
    border: solid currentColor;
    border-radius: 100%;
  }

  @keyframes lds-ring {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }

  .Card:hover .PreviewStatement {
    @apply to-secondary-50;
  }

  mjx-container svg {
    display: inline;
  }

  .skeleton {
    @apply bg-secondary-100 rounded-full;
    animation-name: skeleframe;
    animation-duration: 0.8s;
    animation-direction: alternate;
    animation-iteration-count: infinite;
  }

  @keyframes skeleframe {
    from {
      @apply bg-secondary-100;
    }
    to {
      @apply bg-secondary-200;
    }
  }
}
@tailwind components;
@layer utilites {
  .font-thin {
    font-variation-settings: "wght" 100;
  }
  .font-extralight {
    font-variation-settings: "wght" 200;
  }
  .font-light {
    font-variation-settings: "wght" 300;
  }
  .font-normal {
    font-variation-settings: "wght" 400;
  }
  .font-medium {
    font-variation-settings: "wght" 500;
  }
  .font-semibold {
    font-variation-settings: "wght" 600;
  }
  .font-bold {
    font-variation-settings: "wght" 700;
  }
  .font-extrabold {
    font-variation-settings: "wght" 800;
  }
  .font-black {
    font-variation-settings: "wght" 900;
  }
  .font-inherit {
    font-variation-settings: inherit;
  }
  .w-adaptive {
    width: 1024px;
  }
  .w-adaptive-2 {
    width: 800px;
  }
  @media (max-width: 1024px) {
    .w-adaptive {
      width: 100%;
      padding: 0 1rem;
    }
    .w-adaptive-2 {
      width: 100%;
      padding: 0 2rem;
    }
  }
  @media (max-width: 640px) {
    .w-adaptive-2 {
      width: 100%;
      padding: 0 1rem;
    }
  }
}
@tailwind utilities;

.cm-scroller {
  height: 16rem !important;
}

